 # [#24532] Unused JDate code causing "Catchable fatal error"
 # [#24646] Send HTTP result code 503 for the offline page
 # [#24911] Redirect component does not list 404 errors for missing child page when parent page does exist (patch supplied)
 # [#24496] Improve installation.js
 # [#24859] Debug Language showing up
 # [#24856] Get error after save options for component

17-Feb-2011 Jean-Marie Simonet
 $ Updating ar-AA and sv-SE
 $ Adding Installation language nn-NO. Updating Credits.
 # [#24926] JTRASH instead JTRASHED in jgrid.publishedOptions. Thanks Serge.
 # [#24877] * Menu manager Multilanguage Deactivate Home
 # [#24869] Accommodating for longer string value in Banners Edit page. Thanks Bill and Andrea.

16-Feb-2011 Jean-Marie Simonet
 [#24932] *Search lower and upper limit do not take into account localise.php settings
 [#24923] *Normalise modals UI
 # [#24927] Modules do not have Trashed state. Thanks Serge.
 $ Correcting an html tag in an ini string
 #$ [#24497] Improve the voting plugin. Thanks Rouven and Christophe.
 $ Taking off underline html tag in some ini strings. Thanks Serge.
 $ Small correction in an ini file. Thanks Stella.

15-Feb-2011 Jean-Marie Simonet
 $# [#24897] Untranslated strings TPL_BEEZ5_ISCLOSED and TPL_BEEZ5_LOGO. Thanks Serge.
 # [#24884] Missing messages for some menu item types having no Basic Options. Thanks Bill.
 $# [#24759] * Different Alias fields tooltips.
 #$ [#24882] *Banners unique alias
 # [#24881] Problems with aliases when there is a menu alias menu type. Thanks Mark.
 # [#24872] Transliteration does not work in Category Manager
 $ Corrected an ini string value
 # [#24912] *Multilanguage on and site offline: loggin front-end gets in a loop
 
13-Feb-2011 Jean-Marie Simonet
 $ [#24874] Change "Templates Manager" to "Template Manager". Thanks Mark.

12-Feb-2011 Christophe Demko
 # [#24873] Extra div element in Category List for unpublished articles (Mark Dexter)

11-Feb-2011 Jean-Marie Simonet