@@ -37,6 +37,7 @@ $ -> Language fix or change
  # [#24496] Improve installation.js
  # [#24859] Debug Language showing up
  # [#24856] Get error after save options for component
+ # [#24455] Alias URL does not work with Language filter plugin active - sef off
 
 17-Feb-2011 Jean-Marie Simonet
  $ Updating ar-AA and sv-SE
